--- a/content/assignment/07-code.Rmd
+++ b/content/assignment/07-code.Rmd
@@ -25,7 +25,7 @@ editor_options:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(cache=FALSE, warnings=FALSE, message=FALSE)
+knitr::opts_chunk$set(cache=FALSE, warning=FALSE, message=FALSE)
 knitr::opts_knit$set(root.dir ="../../")
 Sys.setlocale("LC_ALL", "ES_ES.UTF-8")
 ```
